--- a/geek_nlp/1_Pyorch_Tensors.ipynb
+++ b/geek_nlp/1_Pyorch_Tensors.ipynb
@@ -1,115 +1,80 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ead6de9e",
+   "metadata": {},
+   "source": [
+    "# OverView"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2aa5c59",
+   "metadata": {},
+   "source": [
+    "In this series of tutorials, we will introduce some basics of Pytorch. Pay attention that the API's of any library will be subject to changes, therefore it is very important the offcial documentation before proceeding.\n",
+    "\n",
+    "we will cover the following materials in the tutorial.\n",
+    "\n",
+    "1. Create tensors\n",
+    "2. some common mainpulations(including boardcast and einsum)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "16940822",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Package             Version\n",
-      "------------------- -------------------\n",
-      "APScheduler         3.7.0\n",
-      "argon2-cffi         20.1.0\n",
-      "async-generator     1.10\n",
-      "attrs               21.2.0\n",
-      "backcall            0.2.0\n",
-      "beautifulsoup4      4.9.3\n",
-      "bleach              3.3.0\n",
-      "bs4                 0.0.1\n",
-      "certifi             2021.5.30\n",
-      "cffi                1.14.5\n",
-      "chardet             4.0.0\n",
-      "colorama            0.4.4\n",
-      "cycler              0.10.0\n",
-      "decorator           5.0.9\n",
-      "defusedxml          0.7.1\n",
-      "entrypoints         0.3\n",
-      "idna                2.10\n",
-      "importlib-metadata  4.5.0\n",
-      "ipykernel           5.5.5\n",
-      "ipython             7.25.0\n",
-      "ipython-genutils    0.2.0\n",
-      "ipywidgets          7.6.3\n",
-      "jedi                0.18.0\n",
-      "Jinja2              3.0.1\n",
-      "joblib              1.0.1\n",
-      "jsonschema          3.2.0\n",
-      "jupyter             1.0.0\n",
-      "jupyter-client      6.2.0\n",
-      "jupyter-console     6.4.0\n",
-      "jupyter-core        4.7.1\n",
-      "jupyterlab-pygments 0.1.2\n",
-      "jupyterlab-widgets  1.0.0\n",
-      "kiwisolver          1.3.1\n",
-      "lxml                4.6.3\n",
-      "MarkupSafe          2.0.1\n",
-      "matplotlib          3.4.2\n",
-      "matplotlib-inline   0.1.2\n",
-      "mistune             0.8.4\n",
-      "mysql               0.0.3\n",
-      "mysqlclient         2.0.3\n",
-      "nbclient            0.5.3\n",
-      "nbconvert           6.1.0\n",
-      "nbformat            5.1.3\n",
-      "nest-asyncio        1.5.1\n",
-      "notebook            6.4.0\n",
-      "numpy               1.20.3\n",
-      "opencv-python       4.5.2.52\n",
-      "packaging           20.9\n",
-      "pandas              1.2.4\n",
-      "pandocfilters       1.4.3\n",
-      "parso               0.8.2\n",
-      "pickleshare         0.7.5\n",
-      "Pillow              8.2.0\n",
-      "pip                 21.1.1\n",
-      "prometheus-client   0.11.0\n",
-      "prompt-toolkit      3.0.19\n",
-      "pycparser           2.20\n",
-      "Pygments            2.9.0\n",
-      "pyparsing           2.4.7\n",
-      "pyrsistent          0.17.3\n",
-      "python-dateutil     2.8.1\n",
-      "pytz                2021.1\n",
-      "pywin32             301\n",
-      "pywinpty            1.1.3\n",
-      "pyzmq               22.1.0\n",
-      "qtconsole           5.1.0\n",
-      "QtPy                1.9.0\n",
-      "requests            2.25.1\n",
-      "scikit-learn        0.24.2\n",
-      "scipy               1.6.3\n",
-      "Send2Trash          1.7.1\n",
-      "setuptools          52.0.0.post20210125\n",
-      "six                 1.16.0\n",
-      "sklearn             0.0\n",
-      "soupsieve           2.2.1\n",
-      "terminado           0.10.1\n",
-      "testpath            0.5.0\n",
-      "threadpoolctl       2.1.0\n",
-      "torch               1.7.1+cu110\n",
-      "torchvision         0.8.2+cu110\n",
-      "tornado             6.1\n",
-      "tqdm                4.61.0\n",
-      "traitlets           5.0.5\n",
-      "typing-extensions   3.10.0.0\n",
-      "tzlocal             2.1\n",
-      "urllib3             1.26.5\n",
-      "wcwidth             0.2.5\n",
-      "webencodings        0.5.1\n",
-      "wheel               0.36.2\n",
-      "widgetsnbextension  3.5.1\n",
-      "wincertstore        0.2\n",
-      "zipp                3.4.1\n"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[0.0000, 1.0000],\n",
+       "        [0.1000, 0.2000]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "Overview"
+    "import torch\n",
+    "my_tensor = torch.tensor([[0.0, 1.0], [0.1, 0.2]])\n",
+    "my_tensor"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0fc48691",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., 1.],\n",
+       "        [0., 0.]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_tensor = my_tensor.int().float()\n",
+    "new_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "489a688b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
