--- a/geek_nlp/1_Pyorch_Tensors.ipynb
+++ b/geek_nlp/1_Pyorch_Tensors.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "16940822",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
        "        [0.1000, 0.2000]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "0fc48691",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
        "        [0., 0.]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,8 +70,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "489a688b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1.0000, 2.0000],\n",
+      "        [0.1000, 0.2000]], dtype=torch.float64)\n",
+      "tensor([[1.0000, 2.0000],\n",
+      "        [0.1000, 0.2000]])\n",
+      "[[1.  2. ]\n",
+      " [0.1 0.2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np_tensor = np.array([[1.0, 2.0], [0.1, 0.2]])\n",
+    "tensor_from_np = torch.tensor(np_tensor)\n",
+    "print(tensor_from_np)\n",
+    "tensor_from_np = torch.tensor(np_tensor).float()\n",
+    "print(tensor_from_np)\n",
+    "to_numpy = tensor_from_np.numpy()\n",
+    "print(to_numpy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "28656f0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.0000, 1.0000],\n",
+       "        [0.1000, 0.2000]], device='cuda:0')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "my_tensor.to(device=device) # https://pytorch.org/docs/stable/cuda.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be304463",
    "metadata": {},
    "outputs": [],
    "source": []
