--- a/geek_nlp/2_Pytorch_Dataset.ipynb
+++ b/geek_nlp/2_Pytorch_Dataset.ipynb
@@ -24,7 +24,9 @@
    "id": "7bbf2b7c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n"
+   ]
   }
  ],
  "metadata": {
