--- a/geek_nlp/2_Pytorch_Dataset.ipynb
+++ b/geek_nlp/2_Pytorch_Dataset.ipynb
@@ -20,13 +20,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7bbf2b7c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n"
+    "import torch\n",
+    "from torch.utils.data import Dataset, DataLoader"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f3e768e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
