--- a/geek_nlp/2_Pytorch_Dataset.ipynb
+++ b/geek_nlp/2_Pytorch_Dataset.ipynb
@@ -1127,7 +1127,9 @@
    "id": "1a6fc852",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class "
+   ]
   }
  ],
  "metadata": {
