--- a/geek_nlp/2_Pytorch_Dataset.ipynb
+++ b/geek_nlp/2_Pytorch_Dataset.ipynb
@@ -1128,7 +1128,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class "
+    "class MyDictDataset(Dataset):\n",
+    "    def __init__(self):\n",
+    "        self.x = torch.randn(1024, 10)\n",
+    "        self.y = torch.randn(1024)\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return 1024\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        return {'x': self.data[idx, :, :], \"y\":self.y[idx] "
    ]
   }
  ],
