--- a/geek_nlp/2_Pytorch_Dataset.ipynb
+++ b/geek_nlp/2_Pytorch_Dataset.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7bbf2b7c",
    "metadata": {},
    "outputs": [],
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1a6fc852",
    "metadata": {},
    "outputs": [],
@@ -1137,8 +1137,16 @@
     "        return 1024\n",
     "    \n",
     "    def __getitem__(self, idx):\n",
-    "        return {'x': self.data[idx, :, :], \"y\":self.y[idx] "
+    "        return {'x': self.x[idx, :], 'y':self.y[idx]} "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7901aa96",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
